@@ -5,6 +5,7 @@ export(TAXONOMY_RANKS)
 export(ZTransform)
 export(addCluster)
 export(addContaminantQC)
+export(addDivergence)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
 export(addPerSampleDominantTaxa)
@@ -108,6 +109,7 @@ exportMethods("relabundance<-")
 exportMethods(ZTransform)
 exportMethods(addCluster)
 exportMethods(addContaminantQC)
+exportMethods(addDivergence)
 exportMethods(addHierarchyTree)
 exportMethods(addNotContaminantQC)
 exportMethods(addPerSampleDominantFeatures)
