@@ -181,3 +181,19 @@ plotNMDS <- function(x, ...){
                              "dimred = 'NMDS' instead."))
     plotReducedDim(x, ncomponents = 2, dimred = "NMDS",...)
 }
+
+#' @rdname deprecate
+#' @export
+setGeneric("estimateDivergence",signature = c("x"),
+            function(x, ...)
+                standardGeneric("estimateDivergence"))
+
+#' @rdname deprecate
+#' @export
+setMethod("estimateDivergence", signature = c(x="SummarizedExperiment"),
+            function(x, ...){
+                .Deprecated(msg = paste0("'estimateDivergence' is deprecated. ",
+                                        "Use 'addDivergence' instead."))
+                addDivergence(x, ...)
+            }
+)
