@@ -1,11 +1,11 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/estimateDivergence.R
-\name{estimateDivergence}
-\alias{estimateDivergence}
-\alias{estimateDivergence,SummarizedExperiment-method}
+\name{addDivergence}
+\alias{addDivergence}
+\alias{addDivergence,SummarizedExperiment-method}
 \title{Estimate divergence}
 \usage{
-estimateDivergence(
+addDivergence(
   x,
   assay.type = assay_name,
   assay_name = "counts",
@@ -16,7 +16,7 @@ estimateDivergence(
   ...
 )
 
-\S4method{estimateDivergence}{SummarizedExperiment}(
+\S4method{addDivergence}{SummarizedExperiment}(
   x,
   assay.type = assay_name,
   assay_name = "counts",
@@ -78,18 +78,18 @@ tse <- GlobalPatterns
 
 # By default, reference is median of all samples. The name of column where results
 # is "divergence" by default, but it can be specified. 
-tse <- estimateDivergence(tse)
+tse <- addDivergence(tse)
 
 # The method that are used to calculate distance in divergence and 
 # reference can be specified. Here, euclidean distance and dist function from 
 # stats package are used. Reference is the first sample.
-tse <- estimateDivergence(tse, name = "divergence_first_sample", 
+tse <- addDivergence(tse, name = "divergence_first_sample", 
                           reference = assays(tse)$counts[,1], 
                           FUN = stats::dist, method = "euclidean")
 
 # Reference can also be median or mean of all samples. 
 # By default, divergence is calculated by using median. Here, mean is used.
-tse <- estimateDivergence(tse, name = "divergence_average", reference = "mean")
+tse <- addDivergence(tse, name = "divergence_average", reference = "mean")
 
 # All three divergence results are stored in colData.
 colData(tse)
