@@ -28,7 +28,7 @@ reference:
 - subtitle: Alpha Diversity
 - contents:
   - estimateDiversity
-  - estimateDivergence
+  - addDivergence
 - subtitle: Beta Diversity
 - contents:
   - calculateUnifrac
