@@ -110,3 +110,4 @@ Changes in version 1.11.x
 + fix typo in loadFromBiom definition (deprecate file)
 + deprecate subsetSamples, subsetFeatures and subsetTaxa
 + deprecate plotNMDS after moving it to miaViz package
++ rename estimateDivergence to addDivergence
